updated with getting addresses

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
 <script type="text/javascript">
 	 	 
-	 document.getElementById("address1").value 		= "Helsfyr T-bane, Oslo, Norway";
-	 document.getElementById("address2").value 		= "Oslo, Jernbanetorget, T-bane";
-	 document.getElementById("maxDistance").value 	= 35;
-	 document.getElementById("minArea").value 		= 105;
-	 document.getElementById("maxPrice").value 		= 4000000;
+	 document.getElementById("address1").value 		= "Oslo Central Station, Jernbanetorget, Oslo";
+	 document.getElementById("address2").value 		= "Lillestrøm Stasjon, Lillestrøm";
+	 document.getElementById("maxDistance").value 	= 30;
+	 document.getElementById("minArea").value 		= 110;
+	 document.getElementById("maxPrice").value 		= 5000000;
 	 const $loader = $('#loader');
 	
 	 
